replacing embedded resume pdf with text version and links to 2 msword format versions

--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
 For those of you who just want a download link, below are two versions of the actual file:
 <br>
 <ul>
-<li style="list-style-type:none;"><img class="icon" src="images/msword.png" height="18"><a href="files/Simpler-Resume-nonbulleted.docx">Simpler-Resume-nonbulleted.docx</a></li> which is nicely indented giving the illusion of a non-adorned bullet list and <li style="list-style-type:none;"><img class="icon" src="images/msword.png" height="18"><a href="files/Simplest-Resume.docx">Simplest-Resume.docx</a></li>
+<li style="list-style-type:none;"><img class="icon" src="images/msword.png" height="18"><a href="files/Simpler-Resume-nonbulleted.docx">&nbsp;&nbsp;Simpler-Resume-nonbulleted.docx</a></li> which is nicely indented giving the illusion of a non-adorned bullet list and <li style="list-style-type:none;"><img class="icon" src="images/msword.png" height="18"><a href="files/Simplest-Resume.docx">&nbsp;&nbsp;Simplest-Resume.docx</a></li>
 which is entirely vertical and has no indentation whatsoever.
 </ul>
 <br>
