new navbar format

--- a/blank.html
+++ b/blank.html
@@ -8,23 +8,23 @@
 <body>
 <div id=outer>
 <div class="header"><img id="logo" src="images/logo-right.png" alt="a Committee of Lunatics"></div>
-<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html" id="current">Blank Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></div><br />
-<br />
-<br />
-<br />
-<br />
-<br />
+<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html" id="current">Blank Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></div><br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div class="width">Change Me to whatever content you desire</div>
-<br />
-<br />
-<br />
+<br>
+<br>
+<br>
 <div class="footer">
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
-	<br />
-	<br />
+	<br>
+	<br>
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
-	<br />
-	<br />
+	<br>
+	<br>
 	<div class="width">
 		<img id="html5-logo" src="images/HTML5_Logo_32.png" alt="This page contains valid HTML5">
 		<img id="css3-logo" src="images/CSS3_Logo_32.png" alt="This page contains valid CSS3">
