--- a/404.html
+++ b/404.html
@@ -10,32 +10,32 @@
 <div class="header"><img id="logo" src="images/logo-right.png" alt="a Committee of Lunatics"></div>
 <div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></div>
 <div id="wrapper">
-<br />
-<br />
-<br />
-<div class="code">Once upon a midnight dreary, while I websurfed, weak and weary,<br />
-...O'er many a strange and spurious website of 'hot chicks galore',<br />
-...While I clicked my fav'rite bookmark, suddenly there came a warning,<br />
-...And my heart was filled with mourning, mourning for my dear amour.<br />
-..."'Tis not possible," I muttered, "give me back my cheap hardcore!"...<br />
-<br />
+<br>
+<br>
+<br>
+<div class="code">Once upon a midnight dreary, while I websurfed, weak and weary,<br>
+...O'er many a strange and spurious website of 'hot chicks galore',<br>
+...While I clicked my fav'rite bookmark, suddenly there came a warning,<br>
+...And my heart was filled with mourning, mourning for my dear amour.<br>
+..."'Tis not possible," I muttered, "give me back my cheap hardcore!"...<br>
+<br>
 -   Quoth the server, "404".</div>
-<br />
+<br>
 <hr class="fourohfour">
 </div>
-<br />
-<br />
+<br>
+<br>
 <div class="fourohfour">
 <iframe id="notfound_org" src="http://notfound-static.fwebservices.be/404/index.html?&amp;key=a76d9aab91a9ac5ab6897d098cfcce28" width="100%" height="650" frameborder="0"></iframe>
-<br />
-<br />
+<br>
+<br>
 <div class="footer">
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
-	<br />
-	<br />
+	<br>
+	<br>
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
-	<br />
-	<br />
+	<br>
+	<br>
 	<div class="width">
 		<img id="html5-logo" src="images/HTML5_Logo_32.png" alt="This page contains valid HTML5">
 		<img id="css3-logo" src="images/CSS3_Logo_32.png" alt="This page contains valid CSS3">
