adding newest 'Simplest-Resume.docx' and updating html to reflect new changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <div id="wrapper">
 <br>
 <br>
-<br>
 Welcome to my own visible piece of <i>a Committee of Lunatics</i>. This site is currently undergoing a massive refit so that timely information relating to various project will be easily accessible to all who desire it. We hope that you will enjoy your sojourn with us and return in the future when our latest project nears release.
 <br>
 <br>
@@ -42,4 +41,4 @@ Regardless of the ongoing sitewide changes, welcome to my little public piece of
 </div>
 </div>
 </body>
-</html>
+</html><
