--- a/resume.html
+++ b/resume.html
@@ -72,11 +72,11 @@ ongoing development to allow embedding of voluntary pooled bitcoin mining
 <br>
 developing apps to take advantage of background mining via idle gpu processes
 <br>
-Project -- VyncUp (TDHP Event List)
+Project -- VyncUp (<a href="http://texasdancehall.org/calendar" alt="Texas Dance Hall Preservation Events Calendar">TDHP Event Calendar</a>)
 <br>
 technologies -- [ Python, CouchDB, HTML5, JS, jquery, node.js, backbone.js, underscore.js ]
 <br>
-about -- a massively searchable NoSQL event database of bands, dancehalls and events in Texas
+about -- a massively searchable NoSQL event calendar for bands, dancehalls and events by the Texas Dancehall Preservation Society
 <br>
 developed non-flash browser-based file upload system for internal project use
 <br>
