updating links to the TDHP Calendar.

--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@ a Committee of Lunatics
 <br>
 August 2010 - Current
 <br>
-Project -- kowm 
+Project -- (<a href="http://kowm.acommitteeoflunatics.com" alt="">kowm</a>) 
 <br>
 technologies -- [ C++, Python, Ruby ]
 <br>
