begin semantic markup changes add support for IE prior to version 9.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <title>a Committee of Lunatics - Schade</title>
 <style type="text/css" media="screen">@import "css/acol_dark.css";</style>
 <meta charset="utf-8">
+<!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
 <body>
 <div id=outer>
-<div class="header"><img id="logo" src="images/logo-right.png" alt="a Committee of Lunatics"></div>
-<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html" id="current">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></div>
+<header><img id="logo" src="images/logo-right.png" alt="a Committee of Lunatics"></div>
+<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html" id="current">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></header>
 <div id="wrapper">
 <br>
 <br>
