--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>a Committee of Lunatics - Schade</title>
-<style type="text/css" media="screen">@import "css/acol_dark.css";</style>
+<! DOCTYPE html>
+<html lang="en">
+<title>a Committee of Lunatics - schade</title>
+<link rel="stylesheet" href="css/acol_dark.css">
 <meta charset="utf-8">
 <!--[if lt IE 9]>
-  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 </head>
 <body>
