--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 </head>
 <body>
 <div id=outer>
-<header><img id="logo" src="images/logo-right.png" alt="a Committee of Lunatics"></div>
-<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html" id="current">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></header>
+<header id="main">
+	<a href="#" id="slogan"></a><h1><a href="#" id="slogan">a Committee of Lunatics</a></h1>
+</header>
+<nav id="primary">
+	<ul>
+		<li><a href="about.html">About Me</a></li>
+		<li><a href="index.html" id="current">Home Page</a></li>
+		<li><a href="weblog.html">Blog Entries</a></li>
+		<li><a href="contact.html">Contact Me</a></li>
+		<li><a href="resume.html">My R&eacute;sum&eacute;</a></li>
+	</ul>
+</nav>
 <div id="wrapper">
 <br>
 <br>
