adding webfonts for future usage and editing semantic layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 <div id=outer>
 <header id="main">
-	<a href="#" id="slogan"></a><h1><a href="#" id="slogan">a Committee of Lunatics</a></h1>
+	<h1><a href="#" id="co_name">a Committee of Lunatics</a></h1>
+	<h2><a href="#" id="slogan">We've taken over the asylum...</a></h2>
 </header>
 <nav id="primary">
 	<ul>
