move navbar back to inline view

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<h2><a href="#" id="slogan">We've taken over the asylum...</a></h2>
 </header>
 <nav id="primary">
-	<ul>
+	<ul id="inline">
 		<li><a href="about.html">About Me</a></li>
 		<li><a href="index.html" id="current">Home Page</a></li>
 		<li><a href="weblog.html">Blog Entries</a></li>
