--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <div id=outer>
 <header id="main">
+	<a href="#" id="bg-left"></a>
 	<h1><a href="#" id="co_name">a Committee of Lunatics</a></h1>
 	<h2><a href="#" id="slogan">We've taken over the asylum...</a></h2>
 </header>
