some minor css adjustments to color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="wrapper">
 <header id="main">
-	<h2><a href="#" id="primary">a Committee of Lunatics</a></h2>
+	<h2><a href="#" id="company">a Committee of Lunatics</a></h2>
 	<h3><a href="#" id="slogan">We've taken over the asylum...</a></h3>
 </header>
 <nav id="primary">
