fixing link tag for css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <! DOCTYPE html>
 <html lang="en">
+<head>
 <title>a Committee of Lunatics - schade</title>
-<link rel="stylesheet" href="css/acol_dark.css">
+<link rel="stylesheet" src="css/acol_dark.css">
 <meta charset="utf-8">
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
