--- a/resume.html
+++ b/resume.html
@@ -1,15 +1,28 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<! DOCTYPE html>
+<html lang="en">
 <head>
-<title>a Committee of Lunatics - My R&eacute;sum&eacute;</title>
-<style type="text/css" media="screen">@import "css/acol_dark.css";</style>
+<title>a Committee of Lunatics - schade</title>
+<link rel="stylesheet" href="css/acol_dark.css">
 <meta charset="utf-8">
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
 <body>
-<div id=outer>
-<div class="header"><img id="logo" src="images/logo-right.png" alt="a Committee of Lunatics"></div>
-<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html" id="current">My R&eacute;sum&eacute;</a></div>
 <div id="wrapper">
+<header id="main">
+	<h2><a href="#" id="company">a Committee of Lunatics</a></h2>
+	<h3><a href="#" id="slogan">We've taken over the asylum...</a></h3>
+</header>
+<nav id="primary">
+	<ul id="inline">
+		<li><a href="about.html">About Me</a></li>
+		<li><a href="index.html">Home Page</a></li>
+		<li><a href="weblog.html">Blog Entries</a></li>
+		<li><a href="contact.html">Contact Me</a></li>
+		<li><a href="resume.html" id="current">My R&eacute;sum&eacute;</a></li>
+	</ul>
+</nav>
 <br>
 <br>
 <div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.
@@ -35,7 +48,7 @@ Austin, Texas
 Summary
 <br>
 <br>
-I'm always ready to learn something new; in fact, the pursuit of knowledge I don't yet possess is one of my driving factors in daily life. 
+I'm always ready to learn something new; in fact, the pursuit of knowledge I don't yet possess is one of my driving factors in daily life.
 <br>
 <br>
 The burning question thus becomes, "How can my vast array of skills, knowledge, and experience help you and your company assist me in learning even more?"
@@ -50,11 +63,11 @@ a Committee of Lunatics
 <br>
 August 2010 - Current
 <br>
-Project -- (<a href="http://kowm.acommitteeoflunatics.com" alt="">kowm</a>) 
+Project -- (<a href="http://kowm.acommitteeoflunatics.com" alt="">kowm</a>)
 <br>
 technologies -- [ C++, Python, Ruby ]
 <br>
-about -- open-source desktop window manager 
+about -- open-source desktop window manager
 <br>
 designing a Ruby Build Environment associated with kowm
 <br>
@@ -62,7 +75,7 @@ developing a suite of libraries that support the building of modular X apps
 <br>
 developing new X Window Manager using these frameworks
 <br>
-Project -- tumen_miner 
+Project -- tumen_miner
 <br>
 technologies -- [ JS, WebCL ]
 <br>
@@ -93,7 +106,7 @@ Corner House Stock Photo, Inc.
 <br>
 July 2008 -- Current
 <br>
-responsible for all things hardware related within organization 
+responsible for all things hardware related within organization
 <br>
 owned and managed all specs related to hardware or infrastructure within company
 <br>
@@ -118,7 +131,7 @@ maintained physical servers and software load for the following websites:
 <br>
 Network Operations Manager
 <br>
-Century Subsidiaries 
+Century Subsidiaries
 <br>
 February 2008 -- August 2010
 <br>
