--- a/weblog-content.html
+++ b/weblog-content.html
@@ -1,7 +1,30 @@
-
-<br />
-<br />
-<br />
+<! DOCTYPE html>
+<html lang="en">
+<head>
+<title>a Committee of Lunatics - schade</title>
+<link rel="stylesheet" href="css/acol_dark.css">
+<meta charset="utf-8">
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+</head>
+<body>
+<div id="wrapper">
+<header id="main">
+	<h2><a href="#" id="company">a Committee of Lunatics</a></h2>
+	<h3><a href="#" id="slogan">We've taken over the asylum...</a></h3>
+</header>
+<nav id="primary">
+	<ul id="inline">
+		<li><a href="about.html">About Me</a></li>
+		<li><a href="index.html">Home Page</a></li>
+		<li><a href="weblog.html" id="current">Blog Entries</a></li>
+		<li><a href="contact.html">Contact Me</a></li>
+		<li><a href="resume.html">My R&eacute;sum&eacute;</a></li>
+	</ul>
+</nav>
+<br>
+<br>
 <div class="width"><h2>What exactly is <i>a Committee of Lunatics?</i></h2>
 <br />
 I'm sure that some of you may know how much I truly abhor the general state of 'blogging' these days. I really and truly detest having to take the time to rearrange my thoughts in a manner easy for other to understand. I didn't  have these epiphanies or follow these mental tangents in anything resembling a 'normal' mental state. I don't think like you humans, at all. I swear I lose brain cells everytime someone asks me to explain what I just said. It's just so damn frustrating...
@@ -47,3 +70,22 @@ Ah hah! but I have already told you so much about me; what more is there to tell
 <br />
 <i>-- @the Management</i>
 </div>
+<div class="footer">
+	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+	<br>
+	<br>
+	<a href="index.html">click here to go back to my main page</a>
+	<br>
+	<br>
+	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
+	<br>
+	<br>
+	<div class="width">
+		<img id="html5-logo" src="images/HTML5_Logo_32.png" alt="This page contains valid HTML5">
+		<img id="css3-logo" src="images/CSS3_Logo_32.png" alt="This page contains valid CSS3">
+		<br clear="all">
+	</div>
+</div>
+</div>
+</body>
+</html>
