--- a/blank.html
+++ b/blank.html
@@ -1,17 +1,28 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<! DOCTYPE html>
+<html lang="en">
 <head>
-<title>a Committee of Lunatics - Schade</title>
-<style type="text/css" media="screen">@import "css/acol_dark.css";</style>
+<title>a Committee of Lunatics - schade</title>
+<link rel="stylesheet" href="css/acol_dark.css">
 <meta charset="utf-8">
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
 <body>
-<div id=outer>
-<div class="header"><img id="logo" src="images/logo-right.png" alt="a Committee of Lunatics"></div>
-<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html" id="current">Blank Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></div><br>
-<br>
-<br>
-<br>
+<div id="wrapper">
+<header id="main">
+	<h2><a href="#" id="company">a Committee of Lunatics</a></h2>
+	<h3><a href="#" id="slogan">We've taken over the asylum...</a></h3>
+</header>
+<nav id="primary">
+	<ul id="inline">
+		<li><a href="about.html">About Me</a></li>
+		<li><a href="index.html">Home Page</a></li>
+		<li><a href="weblog.html">Blog Entries</a></li>
+		<li><a href="contact.html">Contact Me</a></li>
+		<li><a href="resume.html">My R&eacute;sum&eacute;</a></li>
+	</ul>
+</nav>
 <br>
 <br>
 <div class="width">Change Me to whatever content you desire</div>
@@ -20,6 +31,9 @@
 <br>
 <div class="footer">
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+	<br>
+	<br>
+	<a href="index.html">click here to go back to my main page</a>
 	<br>
 	<br>
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
