--- a/resume-old.html
+++ b/resume-old.html
@@ -1,21 +1,34 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<! DOCTYPE html>
+<html lang="en">
 <head>
-<title>a Committee of Lunatics - My R&eacute;sum&eacute;</title>
-<style type="text/css" media="screen">@import "css/acol_dark.css";</style>
+<title>a Committee of Lunatics - schade</title>
+<link rel="stylesheet" href="css/acol_dark.css">
 <meta charset="utf-8">
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
 <body>
-<div id=outer>
-<div class="header"><img id="logo" src="images/logo-right.png" alt="a Committee of Lunatics"></div>
-<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html" id="current">My R&eacute;sum&eacute;</a></div>
 <div id="wrapper">
+<header id="main">
+	<h2><a href="#" id="company">a Committee of Lunatics</a></h2>
+	<h3><a href="#" id="slogan">We've taken over the asylum...</a></h3>
+</header>
+<nav id="primary">
+	<ul id="inline">
+		<li><a href="about.html">About Me</a></li>
+		<li><a href="index.html" id="current">Home Page</a></li>
+		<li><a href="weblog.html">Blog Entries</a></li>
+		<li><a href="contact.html">Contact Me</a></li>
+		<li><a href="resume.html">My R&eacute;sum&eacute;</a></li>
+	</ul>
+</nav>
 <br>
 <br>
 <div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.
 <br>
 <br>
-You will need to have the acrobat reader plugin installed to view the embedded copy of my r&eacute;sum&eacute;. 
+You will need to have the acrobat reader plugin installed to view the embedded copy of my r&eacute;sum&eacute;.
 <br>
 <br>
 For those of you who just want a download link, below is the actual pdf file.
