--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ I got into computers before the day of the personal computer; serving a glorious
 <br>
 <br>
 <br>
-<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.</div>
+<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:jerry.jackson@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.</div>
 <br>
 <br>
 <br>
@@ -50,7 +50,7 @@ I got into computers before the day of the personal computer; serving a glorious
 	<a href="index.html">click here to go back to my main page</a>
 	<br>
 	<br>
-	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
+	All site contents, unless otherwise stated, are copyright &copy; 2009-2014 Jerry W Jackson - all rights reserved.
 	<br>
 	<br>
 	<div class="width">
