--- a/resume-old.html
+++ b/resume-old.html
@@ -25,7 +25,7 @@
 </nav>
 <br>
 <br>
-<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.
+<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:jerry.jackson@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.
 <br>
 <br>
 You will need to have the acrobat reader plugin installed to view the embedded copy of my r&eacute;sum&eacute;.
