--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
 </nav>
 <br>
 <br>
-<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.
+<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:jerry.jackson@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.
 <br>
 <br>
 For those of you who just want a download link, below are two versions of the actual file:
@@ -42,7 +42,7 @@ Jerry W Jackson
 <br>
 Austin, Texas
 <br>
-<a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">schade@acommitteeoflunatics.com</a>
+<a href="mailto:jerry.jackson@acommitteeoflunatics.com?Subject=Referred from contact page">schade@acommitteeoflunatics.com</a>
 <br>
 <br>
 Summary
@@ -202,7 +202,7 @@ AFS, Agile Methodologies, Amazon VPC, Amazon Web Services, Android, Apache, Arch
 	<a href="index.html">click here to go back to my main page</a>
 	<br>
 	<br>
-	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
+	All site contents, unless otherwise stated, are copyright &copy; 2009-2014, Jerry W Jackson - all rights reserved.
 	<br>
 	<br>
 	<div class="width">
