--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
 </ul>
 <br>
 <ul>
-	<li style="list-style-type:none;"><a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred by contact page"><img alt="send email to schade" src="images/mail.png" height="32" />&nbsp;&nbsp;Email</a></li>
+	<li style="list-style-type:none;"><a href="mailto:jerry.jackson@acommitteeoflunatics.com?Subject=Referred by contact page"><img alt="send email to schade" src="images/mail.png" height="32" />&nbsp;&nbsp;Email</a></li>
 </ul>
 <br>
 <br>
-<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.</div>
+<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:jerry.jackson@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.</div>
 <br>
 <br>
 <br>
@@ -45,7 +45,7 @@
 	<a href="index.html">click here to go back to my main page</a>
 	<br>
 	<br>
-	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
+	All site contents, unless otherwise stated, are copyright &copy; 2009-2014, Jerry W Jackson - all rights reserved.
 	<br>
 	<br>
 	<div class="width">
