--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
 <br>
 <br>
 <div class="footer">
-	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+	<a href="index.html">click here to go back to <i>a Committee of Lunatics</i></a>
 	<br>
 	<br>
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2014, Jerry W Jackson - all rights reserved.
