--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@ I got into computers before the day of the personal computer; serving a glorious
 <br>
 <br>
 <div class="footer">
-	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+	<a href="index.html">click here to go back to <i>a Committee of Lunatics</i></a>
 	<br>
 	<br>
 	<a href="index.html">click here to go back to my main page</a>
