--- a/blank.html
+++ b/blank.html
@@ -30,7 +30,7 @@
 <br>
 <br>
 <div class="footer">
-	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+	<a href="index.html">click here to go back to <i>a Committee of Lunatics</i></a>
 	<br>
 	<br>
 	<a href="index.html">click here to go back to my main page</a>
