--- a/contact.html
+++ b/contact.html
@@ -30,16 +30,16 @@
 </ul>
 <br>
 <ul>
-	<li style="list-style-type:none;"><a href="mailto:jerry.jackson@acommitteeoflunatics.com?Subject=Referred by contact page"><img alt="send email to schade" src="images/mail.png" height="32" />&nbsp;&nbsp;Email</a></li>
+	<li style="list-style-type:none;"><a href="mailto:jerry.w.jackson@gmail.com?Subject=Referred by contact page"><img alt="send email to schade" src="images/mail.png" height="32" />&nbsp;&nbsp;Email</a></li>
 </ul>
 <br>
 <br>
-<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:jerry.jackson@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.</div>
+<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:jerry.w.jackson@gmail.com?Subject=Referred from contact page">this</a> email address.</div>
 <br>
 <br>
 <br>
 <div class="footer">
-	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+	<a href="index.html">click here to go back to <i>a Committee of Lunatics</i></a>
 	<br>
 	<br>
 	<a href="index.html">click here to go back to my main page</a>
