--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@ a Committee of Lunatics
 <br>
 August 2010 - Current
 <br>
-Project -- (<a href="http://kowm.acommitteeoflunatics.com" alt="">kowm</a>)
+Project -- (<a href="http://kowm.github.io" alt="">kowm</a>)
 <br>
 technologies -- [ C++, Python, Ruby ]
 <br>
@@ -196,7 +196,7 @@ AFS, Agile Methodologies, Amazon VPC, Amazon Web Services, Android, Apache, Arch
 <br>
 <br>
 <div class="footer">
-	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+	<a href="index.html">click here to go back to <i>a Committee of Lunatics</i></a>
 	<br>
 	<br>
 	<a href="index.html">click here to go back to my main page</a>
