--- a/weblog-content.html
+++ b/weblog-content.html
@@ -72,7 +72,7 @@ Ah hah! but I have already told you so much about me; what more is there to tell
 <br /><br />
 </div>
 <div class="footer">
-	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+	<a href="index.html">click here to go back to <i>a Committee of Lunatics</i></a>
 	<br>
 	<br>
 	<a href="index.html">click here to go back to my main page</a>
