--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ I got into computers before the day of the personal computer; serving a glorious
 <br>
 <br>
 <br>
-<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:jerry.jackson@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.</div>
+<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:jerry.w.jackson@gmail.com?Subject=Referred from contact page">this</a> email address.</div>
 <br>
 <br>
 <br>
